# zero-shot-api

./: .gitignore  Dockerfile  deployment.yaml  main.py  pyproject.toml
k8s/: deployment.yaml
