[tool.poetry]
name = "zero-shot-clf"
version = "0.1.0"
description = ""
authors = ["Thomas Opsomer <thomasopsomer.enpc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.1"
gunicorn = "^20.0.4"
transformers = "^4.5.0"
uvloop = "^0.14.0"
uvicorn = {version = "^0.12.2", extras = ["standard"]}
google-cloud-storage = "^1.32.0"
onnxruntime = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
